overview page and version support initial pass https://github.com/scenerystack/community/issues/66 https://github.com/scenerystack/community/issues/73

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -5,3 +5,10 @@ Join us for our next Community Meeting on December 11, 2024 at 15:00 UTC! Join o
     href="https://scenerystack.org/join/" target="_blank">Slack/Matrix</a> or check out the <a
     href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a> for info on joining.
 {% endblock %}
+
+{% block outdated %}
+  You're not viewing the latest version.
+  <a href="{{ '../' ~ base_url }}"> 
+    <strong>Click here to go to latest.</strong>
+  </a>
+{% endblock %}
