intermediate reorg, many links broken

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
-{% block announce %}
-Join us for our next Community Meeting on December 11, 2024 at 15:00 UTC! Join our <a
-    href="https://scenerystack.org/join/" target="_blank">Slack/Matrix</a> or check out the <a
-    href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a> for info on joining.
+{% block announce %} Join our <a
+    href="https://scenerystack.org/join/" target="_blank">Matrix/Slack</a> or check out the <a
+    href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a>
 {% endblock %}
 
 {% block outdated %}
