revamp organization and fix refs https://github.com/scenerystack/community/issues/66

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block announce %} Join our <a
-    href="https://scenerystack.org/join/" target="_blank">Matrix/Slack</a> or check out the <a
+    href="https://scenerystack.org/community/join/" target="_blank">Matrix/Slack</a> or check out the <a
     href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a>
 {% endblock %}
 
