--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">Matrix/Slack</a> or
+{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">Matrix</a> or
 check out the <a href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a>
 {% endblock %}
 
