update comms details

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
-{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">Matrix</a> or
-check out the <a href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions</a>
+{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">Matrix chat</a> or <a href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions forum</a>
 {% endblock %}
 
 {% block outdated %}
