--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">Matrix chat</a> or <a href="https://github.com/orgs/scenerystack/discussions" target="_blank">GitHub Discussions forum</a>
+{% block announce %} Join our <a href="https://scenerystack.org/community/join/" target="_blank">chat</a> or <a href="https://github.com/orgs/scenerystack/discussions" target="_blank">forum</a> to engage with the community!
 {% endblock %}
 
 {% block outdated %}
